--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </ul>
     </nav>
   </body>
-  <footer>
+  <footer>&copy;Twenty20 Trivia&trade;
     <script src="js/app.js"></script>
   </footer>
 </html>
