created and scaffolded about us, game, and leaderboard pages

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     </form>
     <nav>
       <ul>
-        <li><a href="aboutUs.html"></a>About Us</li></a>
-        <li><a href="credits.html"></a>Credits</li></a>
-        <li><a href="resources.html"></a>Resources</li></a>
-        <li><a href="leaderBoard.html"></a>Leader Board</li></a>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="aboutUs.html">About Us</li></a>
+        <li><a href="leaderBoard.html">Leader Board</li></a>
       </ul>
     </nav>
   </body>
