--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,9 +17,9 @@
     </article>
 
     <article>
-      <img src="" alt="">
+      <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1" title="aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
       <h2>Aloysious</h2>
-      <p>Info about Aloysious</p>
+      <p>Detailzzzzzzz about Aloysious</p>
     </article>
 
     <article>
