added an id on html form input and added local storage code for userName

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <fieldset>
         <legend></legend>
         <label>Enter your name please
-          <input type="text" name="userName" required="required" value="player">
+          <input id="userName" type="text" name="userName" required="required" value="player">
         </label>
         <button type="submit">Submit</button>
       </fieldset>
