--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -10,7 +10,7 @@
     <h1>Twenty20 Trivia</h1>
     <h2>Leader Board</h2>
 
-    <table>
+    <table id="leaderBoard">
       <thead>
         <tr>
           <td>PLAYAAA NAME</td>
