--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -18,7 +18,11 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <!-- <tr id="first">
+            <td>Player name</td>
+            <td>Player score</td>
+        </tr>
+        <tr id="second">
             <td>Player name</td>
             <td>Player score</td>
         </tr>
@@ -33,11 +37,7 @@
         <tr>
             <td>Player name</td>
             <td>Player score</td>
-        </tr>
-        <tr>
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr>
+        </tr> -->
       </tbody>
     </table>
 
@@ -51,6 +51,6 @@
   </body>
 
   <footer>&copy;Twenty20 Trivia&trade;
-    <script src="js/app.js"></script>
+    <script src="js/leaderBoard.js"></script>
   </footer>
   </html>
