--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Twenty20 Trivia</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Twenty20 Trivia</h1>
