--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -3,7 +3,9 @@
   <head>
     <title>Twenty20 Trivia - Leaderboard</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/leaderBoardStyle.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -49,7 +51,8 @@
       </ul>
     </nav>
   </body>
-
+    <!-- S C R O L L I N G    T E X T   -->
+    <div class="twentyTwentyScroll"><h3>CONGRATS to our CHAMPIONS 🏆!!!</h3></div>
   <footer>&copy;Twenty20 Trivia&trade;
     <script src="js/app.js"></script>
   </footer>
