--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,32 +3,34 @@
   <head>
     <title>Twenty20 Trivia - About Us</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/aboutUsStyle.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <h1>Twenty20 Trivia</h1>
     <h2>Meet The Team</h2>
 
-    <article>
+    <article id="allee">
       <img src="" alt="">
       <h2>Allee</h2>
       <p>Info about Allee</p>
     </article>
 
-    <article>
+    <article id="aloysious">
       <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1" title="aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
       <h2>Aloysious</h2>
       <p>Detailzzzzzzz about Aloysious</p>
     </article>
 
-    <article>
+    <article id="marie"> 
       <img src="" alt="">
       <h2>Marie</h2>
       <p>Info about Marie</p>
     </article>
 
-    <article>
+    <article id="kassie">
       <img src="" alt="">
       <h2>Kassie</h2>
       <p>Info about Kassie</p>
