--- a/game.html
+++ b/game.html
@@ -3,7 +3,9 @@
   <head>
     <title>Twenty20 Trivia - Game</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gameStyle.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   </head>
 
   <body>
