started changing message from alert to being rendered on the page

--- a/game.html
+++ b/game.html
@@ -50,6 +50,10 @@
       </form>
     </div>
 
+    <div id="resultMessage">
+
+    </div>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</li></a>
