--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,29 +12,38 @@
     <h1>Twenty20 Trivia</h1>
     <h2>Meet The Team</h2>
 
-    <article id="allee">
-      <img src="" alt="">
-      <h2>Allee</h2>
-      <p>Info about Allee</p>
-    </article>
+  <div id="bio-top">
+      <article id="allee">
+        <img src="" title="Allee" alt=""height="210px" width="">
+        <h2>Allee</h2>
+        <p>Info about Allee Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was PISSED—at the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
+      </article>
+
+
 
     <article id="aloysious">
-      <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1" title="aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
-      <h2>Aloysious</h2>
-      <p>Detailzzzzzzz about Aloysious</p>
+     <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1" title="Aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
+     <h2>Aloysious</h2>
+      <p>Info about Kassie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was PISSED—at the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
     </article>
+  </div>
 
-    <article id="marie"> 
-      <img src="" alt="">
-      <h2>Marie</h2>
-      <p>Info about Marie</p>
-    </article>
 
-    <article id="kassie">
-      <img src="" alt="">
-      <h2>Kassie</h2>
-      <p>Info about Kassie</p>
-    </article>
+    <div id="bio-bottom">
+      <article id="marie">
+        <img src="" title="Marie" alt=""height="210px" width="">
+        <h2>Marie</h2>
+        <p>Info about Marie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was PISSED—at the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
+      </article>
+
+
+
+      <article id="kassie">
+        <img src="" height="210px">
+        <h2>Kassie</h2>
+        <p>Info about Kassie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was PISSED—at the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
+      </article>
+    </div>
 
     <nav>
       <ul>
