added link to LB from score msg, edited LB column headers

--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -15,8 +15,8 @@
     <table id="leaderBoard">
       <thead>
         <tr>
-          <td>PLAYAAA NAME</td>
-          <td>PLAYAAA SCORE</td>
+          <td>PLAYER NAME</td>
+          <td>PLAYER SCORE</td>
         </tr>
       </thead>
       <tbody>
