added styling to main, game, and leaderboard pages, + 2 images to img folder

--- a/game.html
+++ b/game.html
@@ -14,15 +14,15 @@
 
     <div id="gameCard">
       <p id="question"></p>
-      <img id="questionImage">
     </div>
+      <img id="questionImage">
     
     
 
     <div>
       <form id="gameForm">
        <fieldset>
-          <legend>Choose Your Answer</legend>
+          <legend></legend>
 
           <input type="radio" id="optionOne" name="answer" value="optionOne">
             <label for="optionOne">
