--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
   </head>
   <body>
+   <div id="background-overlay"></div> 
+    <div id="background-underlay"></div>
+<video autoplay muted loop id="myVideo">
+  <source src="/video/masks-up.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+
     <h1>Twenty20 Trivia</h1>
     <p>Enter instructions here</p>
     <form>
@@ -26,6 +33,7 @@
         <li><a href="leaderBoard.html">Leader Board</li></a>
       </ul>
     </nav>
+    <embed src="/audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
   </body>
   <footer>&copy;Twenty20 Trivia&trade;
     <script src="js/app.js"></script>
