--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </video>
 
     <h1>Twenty20 Trivia</h1>
-    <p>Enter instructions here</p>
+    <p>How much do you really know about the year 2020?</p>
     <form>
       <fieldset>
         <legend></legend>
-        <label>Enter your name please
-          <input id="userName" type="text" name="userName" required="required" value="player">
+        <label>Please enter your alias :
+          <input id="userName" type="text" name="userName" required="required" value="randomPlayer">
         </label>
         <button type="submit">Submit</button>
       </fieldset>
