--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -12,6 +12,7 @@
     <h1>Twenty20 Trivia</h1>
     <h2>Leader Board</h2>
 
+    <div id="leaderBoardBox">
     <table id="leaderBoard">
       <thead>
         <tr>
@@ -42,6 +43,7 @@
         </tr> -->
       </tbody>
     </table>
+    </div>
 
     <nav>
       <ul>
