--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Twenty20 Trivia - Leaderboard</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/leaderBoardStyle.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-  </head>
 
-  <body>
-    <h1>Twenty20 Trivia</h1>
-    <h2>Leader Board</h2>
+<head>
+  <title>Twenty20 Trivia - Leaderboard</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/leaderBoardStyle.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
+</head>
 
-    <div id="leaderBoardBox">
-    <table id="leaderBoard">
-      <thead>
-        <tr>
-          <td>PLAYER NAME</td>
-          <td>PLAYER SCORE</td>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- <tr id="first">
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr>
-        <tr id="second">
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr>
-        <tr>
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr>
-        <tr>
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr>
-        <tr>
-            <td>Player name</td>
-            <td>Player score</td>
-        </tr> -->
-      </tbody>
-    </table>
+<body>
+  <div id="page-container">
+    <div id="content-wrap">
+      <h1>Twenty20 Trivia</h1>
+      <h2>Leader Board</h2>
+
+      <!-- Table will render in here -->
+      <div id="leaderBoardBox">
+        <table id="leaderBoard">
+          <thead>
+            <tr>
+              <td>PLAYER NAME</td>
+              <td>PLAYER SCORE</td>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
     </div>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</li></a>
-        <li><a href="aboutUs.html">About Us</li></a>
-        <li><a href="leaderBoard.html">Leader Board</li></a>
-      </ul>
-    </nav>
-  </body>
     <!-- S C R O L L I N G    T E X T   -->
-    <div class="twentyTwentyScroll"><h3>CONGRATS to our CHAMPIONS 🏆!!!</h3></div>
+    <div class="twentyTwentyScroll">
+      <h3>CONGRATS to our CHAMPIONS 🏆!!!</h3>
+    </div>
+
+    <!-- NAV BAR -->
+    <nav>
+      <div id="nav">
+        <ul>
+          <li><a href="index.html">Home</li></a>
+          <li><a href="aboutUs.html">About Us</li></a>
+          <li><a href="leaderBoard.html">Leader Board</li></a>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
   <footer>&copy;Twenty20 Trivia&trade;
     <script src="js/leaderBoard.js"></script>
   </footer>
-  </html>
+
+  </div>
+
+</body>
+
+</html>
