added styling + 1 sound effect, fixed radio buttons

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
   </form>
  
   <nav>
-    <ul>
-      <li><a href="index.html">Home</li></a>
-      <li><a href="aboutUs.html">About Us</li></a>
-      <li><a href="leaderBoard.html">Leader Board</li></a>
-    </ul>
+    <div id="nav">
+      <ul>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="aboutUs.html">About Us</li></a>
+        <li><a href="leaderBoard.html">Leader Board</li></a>
+      </ul>
+    </div>
   </nav>
  
   <embed src="/audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
