--- a/leaderBoard.html
+++ b/leaderBoard.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <div id="background-overlay"></div>
+  <div id="background-underlay"></div>
   <div id="page-container">
     <div id="content-wrap">
       <h1>Twenty20 Trivia</h1>
