--- a/game.html
+++ b/game.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div id="background-overlay"></div>
+  <div id="background-underlay"></div>
+
   <h1>Twenty20 Trivia</h1>
   <h2>Let's Play!</h2>
 
@@ -49,12 +52,16 @@
   </div>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</li></a>
-      <li><a href="aboutUs.html">About Us</li></a>
-      <li><a href="leaderBoard.html">Leader Board</li></a>
-    </ul>
+    <div id="nav">
+      <ul>
+        <li><a href="index.html">Home</li></a>
+        <li><a href="aboutUs.html">About Us</li></a>
+        <li><a href="leaderBoard.html">Leader Board</li></a>
+      </ul>
+    </div>
   </nav>
+
+  <embed src="/audio/ding.wav" loop="false" autostart="true" width="2" height="0">
 </body>
 
 <footer>&copy;Twenty20 Trivia&trade;
