--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       </ul>
     </div>
   </nav>
- 
-  <embed src="/audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
-</body>
 
 <footer>&copy;Twenty20 Trivia&trade;
   <script src="js/app.js"></script>
 </footer>
+
+</div>
+ 
+  <embed src="/audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
+</body>
 
 </html>
