About Us styling

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,61 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Twenty20 Trivia - About Us</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/aboutUsStyle.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-  </head>
 
-  <body>
-    <h1>Twenty20 Trivia</h1>
-    <h2>Meet The Team</h2>
+<head>
+  <title>Twenty20 Trivia - About Us</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/aboutUsStyle.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
+</head>
 
-  <div id="bio-top">
-      <article id="allee">
-        <img src="" title="Allee" alt=""height="210px" width="">
-        <h2>Allee</h2>
-        <p>Info about Allee Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was IRATE-about the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
-      </article>
+<body>
+  <div class="background-overlay"></div>
+  <div class="background-underlay"></div>
+  <div class="page-container">
+    <div class="content-wrap">
+      <h1>Twenty20 Trivia</h1>
+      <h2>Meet The Team</h2>
 
+      <div class="flexbox-container">
+        <section id="top-row">
 
+          <div class="bio">
+            <div class="imgbox">
+              <img src="img/team-allee.jpg">
+            </div>
+            <h3>Allee McCoy</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vel voluptatem inventore iure
+              necessitatibus iusto impedit animi repudiandae minima consectetur eum quia molestiae placeat quod aliquid,
+              excepturi reiciendis in dolor voluptas ratione unde sapiente similique? Architecto sapiente veritatis enim
+              cumque?</p>
+          </div>
 
-    <article id="aloysious">
-     <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1" title="Aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
-     <h2>Aloysious</h2>
-      <p>Info about Kassie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was IRATE-about  the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
-    </article>
-  </div>
+          <div class="bio">
+            <div class="imgbox">
+              <img src="img/team-aloysious.jpg">
+            </div>
+            <h3>Aloysious</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vel voluptatem inventore iure
+              necessitatibus iusto impedit animi repudiandae minima consectetur eum quia molestiae placeat quod aliquid,
+              excepturi reiciendis in dolor voluptas ratione unde sapiente similique? Architecto sapiente veritatis enim
+              cumque?</p>
+          </div>
+        </section>
 
+        <section id="bottom-row">
+          <div class="bio">
+            <div class="imgbox">
+              <img src="img/team-kassie.jpg">
+            </div>            
+            <h3>Kassie Bradshaw</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vel voluptatem inventore iure
+              necessitatibus iusto impedit animi repudiandae minima consectetur eum quia molestiae placeat quod aliquid,
+              excepturi reiciendis in dolor voluptas ratione unde sapiente similique? Architecto sapiente veritatis enim
+              cumque?</p>
+          </div>
+          <div class="bio">
+            <div class="imgbox">
+              <img src="img/team-marie.jpg">
+            </div>              
+            <h3>Marie Marcos</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vel voluptatem inventore iure
+              necessitatibus iusto impedit animi repudiandae minima consectetur eum quia molestiae placeat quod aliquid,
+              excepturi reiciendis in dolor voluptas ratione unde sapiente similique? Architecto sapiente veritatis enim
+              cumque?</p>
+          </div>
+        </section>
+      </div>
 
-    <div id="bio-bottom">
-      <article id="marie">
-        <img src="" title="Marie" alt=""height="210px" width="">
-        <h2>Marie</h2>
-        <p>Info about Marie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was IRATE-about  the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
-      </article>
+      
+        <!-- <article id="aloysious">
+          <img
+            src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/123095914_3805352646144462_5948360615313439197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=174925&_nc_ohc=lytYqz7bEhQAX9-MJW9&_nc_ht=scontent-sea1-1.xx&oh=b7ad561826a9cc10f79f45b9fefdfd9f&oe=6068EDC1"
+            title="Aloysious" alt="Aloysious heel clicking in the air over a forest floor mandala" height="210px">
+          <h3>Aloysious</h3>
+          <p>Info about Kassie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class
+            in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail
+            home the end-of-year cards, and my mom got it before I could intercept with my fake. She was IRATE-about the
+            school for their error. The teacher also retired that year and had already thrown out his records, so they
+            had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve
+            never told her the truth.</p>
+        </article> -->
 
-
-
-      <article id="kassie">
-        <img src="" height="210px">
-        <h2>Kassie</h2>
-        <p>Info about Kassie Detailzzzzzzz about Aloysious The fake report card: I failed the first quarter of a class in middle school, so I made a fake report card. I did this every quarter that year. I forgot that they mail home the end-of-year cards, and my mom got it before I could intercept with my fake. She was IRATE-about  the school for their error. The teacher also retired that year and had already thrown out his records, so they had to take my mother’s “proof” (the fake ones I made throughout the year) and “correct” the “mistake.” I’ve never told her the truth.</p>
-      </article>
+      <nav>
+        <div class="nav">
+          <ul>
+            <li><a href="index.html">Home</li></a>
+            <li><a href="aboutUs.html">About Us</li></a>
+            <li><a href="leaderBoard.html">Leader Board</li></a>
+          </ul>
+        </div>
+      </nav>
     </div>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</li></a>
-        <li><a href="aboutUs.html">About Us</li></a>
-        <li><a href="leaderBoard.html">Leader Board</li></a>
-      </ul>
-    </nav>
+    <footer>&copy;Twenty20 Trivia&trade;
+      <script src="js/app.js"></script>
+    </footer>
 
-  </body>
+    </div>
 
-  <footer>&copy;Twenty20 Trivia&trade;
-    <script src="js/app.js"></script>
-  </footer>
-  </html>
+</body>
+
+
+</html>
