fixed links to assests

--- a/game.html
+++ b/game.html
@@ -65,7 +65,7 @@
     <script src="js/game.js"></script>
   </footer>
   
-  <embed src="/audio/ding.wav" loop="false" autostart="true" width="2" height="0">
+  <embed src="audio/ding.wav" loop="false" autostart="true" width="2" height="0">
 </body>
 
 
