--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="background-overlay"></div>
   <div id="background-underlay"></div>
   <video autoplay muted id="myVideo">
-    <source src="/video/masks-up.mp4" type="video/mp4">
+    <source src="video/masks-up.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 
@@ -44,7 +44,7 @@
 
 </div>
  
-  <embed src="/audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
+  <embed src="audio/bensound-happyrock.mp3" loop="true" autostart="true" width="2" height="0">
 </body>
 
 </html>
