fixed links round2 and aligned nav bars

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,16 +69,16 @@
             never told her the truth.</p>
         </article> -->
 
-      <nav>
-        <div class="nav">
-          <ul>
-            <li><a href="index.html">Home</li></a>
-            <li><a href="aboutUs.html">About Us</li></a>
-            <li><a href="leaderBoard.html">Leader Board</li></a>
-          </ul>
-        </div>
-      </nav>
-    </div>
+        <nav>
+          <div id="nav">
+            <ul>
+              <li><a href="index.html">Home</li></a>
+              <li><a href="aboutUs.html">About Us</li></a>
+              <li><a href="leaderBoard.html">Leader Board</li></a>
+            </ul>
+          </div>
+        </nav>
+      </div>
 
     <footer>&copy;Twenty20 Trivia&trade;
       <script src="js/app.js"></script>
