made nav bar fix

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -70,7 +70,7 @@
         </article> -->
 
         <nav>
-          <div id="nav">
+          <div class="nav">
             <ul>
               <li><a href="index.html">Home</li></a>
               <li><a href="aboutUs.html">About Us</li></a>
