--- a/game.html
+++ b/game.html
@@ -47,12 +47,10 @@
     </form>
   </div>
 
-  <div id="results">
-
-  </div>
+  <div id="results"></div>
 
   <nav>
-    <div id="nav">
+    <div class="nav">
       <ul>
         <li><a href="index.html">Home</li></a>
         <li><a href="aboutUs.html">About Us</li></a>
@@ -60,6 +58,7 @@
       </ul>
     </div>
   </nav>
+</div>
 
   <footer>&copy;Twenty20 Trivia&trade;
     <script src="js/game.js"></script>
